--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "dev": "node ",
+    "start": "cross-env NODE_ENV=production node server/server.js",
+    "dev": "concurrently \"cross-env NODE_ENV=development webpack serve --open\" \"cross-env NODE_ENV=development nodemon server/server.js\"",
     "clean": "rm dist/bundle.js",
     "build-dev": "webpack --mode development",
     "build-prod": "webpack --mode production",
     "test": "jest"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
+    "express": "^4.18.1",
     "lodash": "^4.17.21",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "ts-node": "^10.9.1"
@@ -27,12 +32,16 @@
     "@types/react-dom": "^18.0.6",
     "babel-jest": "^28.1.3",
     "babel-loader": "^8.2.5",
+    "concurrently": "^7.3.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
+    "dotenv": "^16.0.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^28.1.3",
     "lodash-webpack-plugin": "^0.11.6",
     "node-sass": "^7.0.1",
+    "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
@@ -40,6 +49,7 @@
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3"
   }
 }
