--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "dev": "node ",
+    "dev": "concurrently \"npm run server\" \"NODE_ENV=development webpack serve --open\"",
     "clean": "rm dist/bundle.js",
     "build-dev": "webpack --mode development",
     "build-prod": "webpack --mode production",
@@ -28,6 +28,7 @@
     "@types/react-dom": "^18.0.6",
     "babel-jest": "^28.1.3",
     "babel-loader": "^8.2.5",
+    "concurrently": "^7.3.0",
     "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
@@ -41,6 +42,7 @@
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3"
   }
 }
