--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
