--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
+    "framer-motion": "^6.5.1",
     "lodash": "^4.17.21",
     "path": "^0.12.7",
     "react": "^18.2.0",
