--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
+    "framer-motion": "^6.5.1",
     "lodash": "^4.17.21",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
