--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
+    "js-convert-case": "^4.2.0",
     "lodash": "^4.17.21",
+    "mongoose": "^6.5.0",
     "path": "^0.12.7",
     "pg": "^8.7.3",
+    "pluralize": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "ts-node": "^10.9.1"
