--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "lodash": "^4.17.21",
     "path": "^0.12.7",
     "react": "^18.2.0",
+    "react-code-blocks": "^0.0.9-0",
     "react-dom": "^18.2.0",
+    "styled-components": "^5.3.5",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
