--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
+    "fontawesome-free": "^1.0.4",
     "framer-motion": "^6.5.1",
     "lodash": "^4.17.21",
     "path": "^0.12.7",
@@ -26,8 +27,8 @@
     "react": "^18.2.0",
     "react-code-blocks": "^0.0.9-0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0",
     "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5",
     "ts-node": "^10.9.1"
   },
