more dropdown options above code generation and boilerplate code generation partially built out

--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
     "express": "^4.18.1",
     "framer-motion": "^6.5.1",
     "lodash": "^4.17.21",
+    "multiselect-react-dropdown": "^2.0.25",
     "path": "^0.12.7",
     "pg": "^8.7.3",
     "react": "^18.2.0",
     "react-code-blocks": "^0.0.9-0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0",
     "react-icons": "^4.4.0",
-    "styled-components": "^5.3.5",
+    "react-router-dom": "^6.3.0",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
