basic testing file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,6 @@
     },
     "include": [
         "./client/**/*"
-    ]
+    ],
+    "exclude": ["./coverage", "./dist", "__tests__", "jest.config.js", "./node_modules"]
 }
