--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "clean": "rm dist/bundle.js",
     "build-dev": "webpack --mode development",
     "build-prod": "webpack --mode production",
-    "test": "jest --coverage"
+    "test": "jest --coverage "
   },
   "dependencies": {
     "axios": "^0.27.2",
@@ -47,6 +47,7 @@
     "@types/node": "^18.6.4",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/supertest": "^2.0.12",
     "babel-jest": "^28.1.3",
     "babel-loader": "^8.2.5",
     "concurrently": "^7.3.0",
