--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "node-sass": "^7.0.1",
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
+    "puppeteer": "^16.1.0",
+    "regenerator-runtime": "^0.13.9",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
     "supertest": "^6.2.4",
