--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "clean": "rm dist/bundle.js",
     "build-dev": "webpack --mode development",
     "build-prod": "webpack --mode production",
+    "kill": "npx kill-port 3000 8080",
     "test": "jest"
   },
   "dependencies": {
