--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "clean": "rm dist/bundle.js",
     "build-dev": "webpack --mode development",
     "build-prod": "webpack --mode production",
-    "test": "jest --coverage "
+    "kill": "npx kill-port 3000 8080",
+    "test": "jest"
   },
   "dependencies": {
     "axios": "^0.27.2",
@@ -22,6 +23,7 @@
     "express": "^4.18.1",
     "fontawesome-free": "^1.0.4",
     "framer-motion": "^6.5.1",
+    "fs": "^0.0.1-security",
     "js-convert-case": "^4.2.0",
     "lodash": "^4.17.21",
     "mongoose": "^6.5.0",
