--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node server/server.js",
+    "start": "cross-env NODE_ENV=production ts-node server/server.ts",
     "dev": "concurrently \"cross-env NODE_ENV=development webpack serve --open\" \"cross-env NODE_ENV=development nodemon server/server.ts\"",
     "clean": "rm dist/bundle.js",
+    "build": "webpack",
     "build-dev": "webpack --mode development",
     "build-prod": "webpack --mode production",
     "kill": "npx kill-port 3000 8080",
@@ -25,7 +26,7 @@
     "framer-motion": "^6.5.1",
     "fs": "^0.0.1-security",
     "js-convert-case": "^4.2.0",
-    "lodash": "^4.17.21",
+    "lodash": "^4.17.21", 
     "mongoose": "^6.5.0",
     "multiselect-react-dropdown": "^2.0.25",
     "path": "^0.12.7",
