--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "build-dev": "webpack --mode development",
     "build-prod": "webpack --mode production",
     "kill": "npx kill-port 3000 8080",
-    "test": "jest"
+    "test": "jest",
+    "install-client": "npm install",
+    "heroku-build": "npm run build-prod",
+    "heroku-postbuild": "npm run install-client && npm run heroku-build"
   },
   "dependencies": {
     "axios": "^0.27.2",
