--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "start": "cross-env NODE_ENV=production ts-node server/server.ts",
     "dev": "concurrently \"cross-env NODE_ENV=development webpack serve --open\" \"cross-env NODE_ENV=development nodemon server/server.ts\"",
     "clean": "rm dist/bundle.js",
-    "build-prod": "webpack",
+    "build-dev": "webpack --mode development",
+    "build-prod": "webpack --mode production",
     "kill": "npx kill-port 3000 8080",
     "test": "jest",
     "install-client": "npm install",
-    "heroku-build": "npm run build-prod",
-    "heroku-postbuild": "npm run install-client && npm run heroku-build"
+    "heroku-postbuild": "npm run install-client && npm run build"
   },
   "dependencies": {
     "axios": "^0.27.2",
