--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "kill": "npx kill-port 3000 8080",
     "test": "jest",
     "install-client": "npm install",
+    "heroku-prebuild": "npm install -D",
     "heroku-postbuild": "npm run install-client && npm run build-prod"
   },
   "dependencies": {
