--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build-prod": "webpack --mode production",
     "kill": "npx kill-port 3000 8080",
     "test": "jest",
-    "install-client": "npm install && npm install -D",
+    "install-client": "npm install",
     "heroku-postbuild": "npm run install-client && npm run build-prod"
   },
   "dependencies": {
