--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node server/server.js",
+    "start": "cross-env NODE_ENV=production ts-node server/server.ts",
     "dev": "concurrently \"cross-env NODE_ENV=development webpack serve --open\" \"cross-env NODE_ENV=development nodemon server/server.ts\"",
     "clean": "rm dist/bundle.js",
     "build-prod": "webpack",
     "kill": "npx kill-port 3000 8080",
     "test": "jest",
-    "install-client": "npm install && npm install -D",
+    "install-client": "npm install",
     "heroku-postbuild": "npm run install-client && npm run build-prod"
   },
   "dependencies": {
