added ts-node to dependencies to run on heroku

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5",
+    "ts-node": "^10.9.1",
     "wrap-ansi": "^8.0.1"
   },
   "devDependencies": {
