--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "start": "cross-env NODE_ENV=production ts-node server/server.ts",
     "dev": "concurrently \"cross-env NODE_ENV=development webpack serve --open\" \"cross-env NODE_ENV=development nodemon server/server.ts\"",
     "clean": "rm dist/bundle.js",
-    "build-dev": "webpack --mode development",
-    "build-prod": "webpack --mode production",
+    "build-prod": "webpack",
     "kill": "npx kill-port 3000 8080",
     "test": "jest",
     "install-client": "npm install",
