--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "start": "NODE_ENV=production ts-node server/server.ts",
+    "start": "NODE_ENV=production node dist/index.js",
     "dev": "concurrently \"cross-env NODE_ENV=development webpack serve --open\" \"cross-env NODE_ENV=development nodemon server/server.ts\"",
     "clean": "rm dist/bundle.js",
-    "build-prod": "webpack",
+    "build-prod": "webpack && tsc",
     "kill": "npx kill-port 3000 8080",
     "test": "jest",
     "install-client": "npm install --dev",
