--- a/package.json
+++ b/package.json
@@ -13,13 +13,9 @@
     "start": "cross-env NODE_ENV=production ts-node server/server.ts",
     "dev": "concurrently \"cross-env NODE_ENV=development webpack serve --open\" \"cross-env NODE_ENV=development nodemon server/server.ts\"",
     "clean": "rm dist/bundle.js",
-<<<<<<< HEAD
-    "build-prod": "webpack",
-=======
     "build": "webpack",
     "build-dev": "webpack --mode development",
     "build-prod": "webpack --mode production",
->>>>>>> frontend
     "kill": "npx kill-port 3000 8080",
     "test": "jest",
     "install-client": "npm install",
@@ -35,7 +31,7 @@
     "framer-motion": "^6.5.1",
     "fs": "^0.0.1-security",
     "js-convert-case": "^4.2.0",
-    "lodash": "^4.17.21", 
+    "lodash": "^4.17.21",
     "mongoose": "^6.5.0",
     "multiselect-react-dropdown": "^2.0.25",
     "path": "^0.12.7",
@@ -43,6 +39,7 @@
     "pluralize": "^8.0.0",
     "react": "^18.2.0",
     "react-code-blocks": "^0.0.9-0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
