added server files to TS compiler

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
         "esModuleInterop": true,
     },
     "include": [
-        "./client/**/*"
+        "./client/**/*",
+        "./server/**/*"
     ],
     "exclude": ["./coverage", "./dist", "__tests__", "jest.config.js", "./node_modules"]
 }
