dynamoDB inclusion into backend

--- a/package.json
+++ b/package.json
@@ -11,21 +11,21 @@
   "license": "ISC",
   "scripts": {
     "start": "cross-env NODE_ENV=production ts-node server/server.ts",
-    "dev": "concurrently \"cross-env NODE_ENV=development webpack serve --open\" \"cross-env NODE_ENV=development nodemon server/server.ts\"",
+    "dev": "concurrently \"cross-env NODE_ENV=development webpack serve\" \"cross-env NODE_ENV=development nodemon server/server.ts\"",
     "clean": "rm dist/bundle.js",
-    "build": "webpack",
-    "build-dev": "webpack --mode development",
-    "build-prod": "webpack --mode production",
+    "build-prod": "webpack",
     "kill": "npx kill-port 3000 8080",
     "test": "jest",
     "install-client": "npm install",
     "heroku-postbuild": "npm run install-client && npm run build-prod"
   },
   "dependencies": {
+    "aws-sdk": "^2.1193.0",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
+    "dynamoose": "^2.8.6",
     "express": "^4.18.1",
     "fontawesome-free": "^1.0.4",
     "framer-motion": "^6.5.1",
@@ -34,12 +34,12 @@
     "lodash": "^4.17.21",
     "mongoose": "^6.5.0",
     "multiselect-react-dropdown": "^2.0.25",
+    "nanoid": "^3.0.0",
     "path": "^0.12.7",
     "pg": "^8.7.3",
     "pluralize": "^8.0.0",
     "react": "^18.2.0",
     "react-code-blocks": "^0.0.9-0",
-    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
