--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "clean": "rm dist/bundle.js",
     "build-dev": "webpack --mode development",
     "build-prod": "webpack --mode production",
-    "test": "jest --coverage "
+    "test": "jest --coverage --forceExit"
   },
   "dependencies": {
     "axios": "^0.27.2",
