--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "^18.2.0",
     "react-code-blocks": "^0.0.9-0",
     "react-dom": "^18.2.0",
+    "react-flow-renderer": "^10.3.16",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5",
