--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "kill": "npx kill-port 3000 8080",
     "test": "jest",
     "install-client": "npm install",
-    "heroku-postbuild": "npm run install-client && npm run build-prod"
+    "heroku-postbuild": "npm run install-client && npm run build-prod",
+    "build": "webpack --config ./webpack.config.js",
+    "start-full": "cross-env NODE_ENV=production ts-node server/server.ts",
+    "dev:hot": "NODE_ENV=development nodemon ./server/server.ts & webpack-dev-server --open --hot"
   },
   "dependencies": {
     "aws-sdk": "^2.1193.0",
