--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -8,6 +8,8 @@ services:
     volumes:
       - .:/usr/src/app
       - node_modules:/usr/src/app/node_modules
+    env_file:
+      - .env
     command: npm run start-dock
 volumes:
   node_modules:
