--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "clean": "rm dist/bundle.js",
     "build-prod": "webpack",
     "kill": "npx kill-port 3000 8080",
-    "test": "jest --coverage --forceExit",
+    "test": "jest --coverage --forceExit && npm run test:cypress",
     "install-client": "npm install",
-    "heroku-postbuild": "npm run install-client && npm run build-prod"
+    "heroku-postbuild": "npm run install-client && npm run build-prod",
+    "cypress:open": "npm run dev & cypress open", 
+    "test:cypress": "npm run dev & cypress run"
   },
   "dependencies": {
     "aws-sdk": "^2.1193.0",
@@ -62,6 +64,7 @@
     "concurrently": "^7.3.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
+    "cypress": "^10.6.0",
     "dotenv": "^16.0.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
