tsc to reduce memory use
Co-authored-by: Thomas Ho <t1ho@users.noreply.github.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "outDir": "./dist/",
+        "outDir": "comp",
         "sourceMap": true,
         "strict": true,
         "noImplicitReturns": true,
@@ -12,8 +12,5 @@
         "jsx": "react",
         "esModuleInterop": true,
     },
-    "include": [
-        "./client/**/*"
-    ],
-    "exclude": ["./coverage", "./dist", "__tests__", "jest.config.js", "./node_modules"]
+    "exclude": ["./coverage", "./dist", "./__tests__", "jest.config.js", "node_modules", "./cypress", "jest*", "cypress*", "tailwind*", "webpack*"]
 }
