--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test": "jest --coverage --forceExit && npm run kill && npm run test:cypress && npm run kill",
     "install-client": "npm install",
     "heroku-postbuild": "npm run install-client && npm run build-prod",
-    "cypress:open": "npm run dev & cypress open", 
+    "cypress:open": "npm run dev & cypress open",
     "test:cypress": "npm run dev & cypress run"
   },
   "dependencies": {
@@ -59,6 +59,8 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.34.0",
+    "@typescript-eslint/parser": "^5.34.0",
     "babel-jest": "^28.1.3",
     "babel-loader": "^8.2.5",
     "concurrently": "^7.3.0",
@@ -66,6 +68,10 @@
     "css-loader": "^6.7.1",
     "cypress": "^10.6.0",
     "dotenv": "^16.0.1",
+    "eslint": "^8.22.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-react": "^7.30.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^28.1.3",
